# asm

./: .gitignore  LICENSE.md  README.md  Vagrantfile  provision.sh
i386/skeleton/: bare.asm
x64/skeleton/: bare.asm  meson.build
x86/skeleton/: meson.build
